tests/samples/negative/expressions/increment_let.ax
module increment_let;

fn main() -> i32 {
    let value: i32 = 1;
    value++;
    return value;
}
